--- a/app/globals.css
+++ b/app/globals.css
@@ -135,6 +135,7 @@
     }
   }
 
+  /* COMPONENTS */
   .filter-trigger {
     @apply flex items-center justify-center px-4 py-2 border border-gray-20 rounded-[28px] gap-3;
 
@@ -157,5 +158,71 @@
         @apply absolute right-3 top-1/2 -translate-y-1/2;
       }
     }
+  }
+
+  /* video-card */
+  .video-card {
+    @apply flex flex-col rounded-2xl w-full border border-gray-20 aspect-[16/9] relative;
+
+    .thumbnail {
+      @apply w-full rounded-t-2xl object-cover h-[190px];
+    }
+
+    article {
+      @apply flex flex-col gap-3 px-3.5 pt-4 pb-4.5 rounded-b-2xl;
+
+      div {
+        @apply flex gap-2 justify-between;
+        figure {
+          @apply flex items-center gap-1.5;
+
+          figcaption {
+            @apply flex flex-col gap-0.5;
+
+            h3 {
+              @apply text-xs font-semibold text-dark;
+            }
+
+            p {
+              @apply text-xs text-dark-80 font-normal capitalize;
+            }
+          }
+        }
+        aside {
+          @apply flex items-center gap-1;
+
+          span {
+            @apply text-xs text-dark-80 font-normal;
+          }
+        }
+      }
+
+      h2 {
+        @apply text-base text-dark-80 font-semibold truncate;
+      }
+
+      footer {
+        @apply flex items-center gap-4;
+
+        div {
+          @apply flex items-center gap-1 mr-1;
+
+          span {
+            @apply text-xs text-gray-20 font-normal;
+          }
+        }
+      }
+    }
+
+    .copy-btn {
+      @apply absolute top-3 right-3 shadow-md hover:shadow-lg transition duration-200 bg-white rounded-full size-6 flex items-center justify-center;
+    }
+
+    .duration {
+      @apply absolute top-40 right-2 bg-dark-80 font-medium text-white text-xs px-2.5 py-1 rounded-full;
+    }
+  }
+  .video-grid {
+    @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6;
   }
 }
