auth-ui-complete

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,23 @@
   --color-dark: #000000;
   --color-dark-80: #1c1b1b;
   --color-gray-20: rgba(108, 102, 133, 0.2);
+  --shadow-10: 0px 6px 24px 0px rgba(0, 0, 0, 0.1);
+  --shadow-15: 0px 8px 24px 0px rgba(0, 0, 0, 0.15);
+  --shadow-20: 0px 10px 30px 0px rgba(0, 0, 0, 0.2);
+  --text-28: 1.75rem;
+
+  --background-image-radial-100: radial-gradient(
+      79.36% 59.94% at 101.94% -1.83%,
+      #ededed 0%,
+      #fff 42%,
+      rgba(0, 0, 0, 0) 42%
+    ),
+    radial-gradient(
+      60.29% 53.62% at 0% 100%,
+      #fafafa 0%,
+      #fff 42%,
+      rgba(0, 0, 0, 0) 42%
+    );
 }
 
 @layer base {
@@ -61,7 +78,9 @@
     @apply flex flex-col min-h-screen pt-12.5 pb-20 gap-9;
   }
 
-  /* navbar */
+  .overlay {
+    @apply bg-radial-100 w-full h-full absolute top-0 -z-10;
+  } /* navbar */
   .navbar {
     @apply h-[90px] border-b border-gray-20 flex items-center;
 
@@ -224,5 +243,82 @@
   }
   .video-grid {
     @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6;
+  }
+
+  /* sign in page */
+  .sign-in {
+    @apply w-full min-h-screen flex flex-col-reverse lg:flex-row justify-between overflow-hidden max-lg:gap-10;
+
+    .testimonial {
+      @apply bg-gray-20 lg:w-1/2 flex flex-col justify-between lg:h-screen w-full py-10 px-6 lg:pl-10 gap-6;
+
+      a {
+        @apply flex items-center gap-2.5;
+      }
+
+      .description {
+        @apply flex items-center justify-center;
+
+        section {
+          @apply flex flex-col items-center justify-center gap-8 px-6 sm:px-8 w-full max-w-2xl;
+
+          figure {
+            @apply flex items-center gap-1 justify-center;
+          }
+
+          p {
+            @apply text-3xl font-semibold text-dark text-center -tracking-[2px];
+          }
+
+          article {
+            @apply flex flex-col gap-2.5 items-center;
+
+            div {
+              @apply flex flex-col items-center gap-1;
+
+              h2 {
+                @apply text-base font-bold text-dark;
+              }
+
+              p {
+                @apply text-dark-80 font-normal text-sm -tracking-[0.5px];
+              }
+            }
+          }
+        }
+      }
+
+      p {
+        @apply text-sm font-medium text-gray-20;
+      }
+    }
+
+    .google-sign-in {
+      @apply flex items-center justify-center lg:w-1/2 w-full lg:h-screen px-10 py-10;
+
+      section {
+        @apply shadow-10 max-w-xl w-full flex flex-col px-5 py-7.5 gap-8 rounded-xl;
+
+        a {
+          @apply flex items-center gap-2.5 justify-center;
+
+          h1 {
+            @apply text-28 font-black text-dark;
+          }
+        }
+
+        p {
+          @apply text-3xl font-bold text-dark text-center -tracking-[2px];
+
+          span {
+            @apply text-dark;
+          }
+        }
+
+        button {
+          @apply w-full flex justify-center items-center gap-2.5 bg-white border border-gray-20 rounded-4xl py-4 text-base text-dark font-semibold cursor-pointer -tracking-[0.8px];
+        }
+      }
+    }
   }
 }
