video-page-complete

--- a/app/globals.css
+++ b/app/globals.css
@@ -394,4 +394,25 @@
       }
     }
   }
+
+  /* empty state */
+  .empty-state {
+    @apply flex flex-col items-center px-4 py-10 gap-6 rounded-2xl border border-gray-20 shadow-10 w-full;
+
+    figure {
+      @apply bg-gray-20 rounded-[20px] flex items-center justify-center size-20;
+    }
+
+    article {
+      @apply flex flex-col items-center gap-1.5;
+
+      h1 {
+        @apply text-dark text-2xl font-bold -tracking-[1px];
+      }
+
+      p {
+        @apply text-sm font-normal text-gray-20 -tracking-[0.5px];
+      }
+    }
+  }
 }
